# Elio

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP-0.5.0.md  SECURITY-THANKS.md  SECURITY.md
.claude/: release-readiness-v0.9.0.md
.claude/fetch_cache/catch2-build/: Makefile  cmake_install.cmake
.claude/fetch_cache/catch2-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.claude/fetch_cache/fmt-build/: Makefile  cmake_install.cmake  fmt-targets.cmake
.claude/fetch_cache/fmt-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.claude/fetch_cache/nghttp2-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
.claude/fetch_cache/nghttp2-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.claude/workflows/: concurrency-audit.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  wiki-sync.yml
build-min/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  ElioConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-min/tests/: CTestTestfile.cmake  cmake_install.cmake  elio_tests-b12d07c_include.cmake  elio_tests-b12d07c_tests.cmake  elio_tests_asan-b12d07c_include.cmake  elio_tests_asan-b12d07c_tests.cmake  elio_tests_tsan-b12d07c_include.cmake
build_warn/: CMakeCache.txt  CTestTestfile.cmake  ElioConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_warn/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_warn/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  elio_tests-b12d07c_include.cmake  elio_tests-b12d07c_tests.cmake  elio_tests_asan-b12d07c_include.cmake  elio_tests_tsan-b12d07c_include.cmake
cmake/: ElioConfig.cmake.in
examples/: CMakeLists.txt  async_file_io.cpp  autoscaler_example.cpp  bench_channel.cpp  bench_tcp_asio.cpp  bench_tcp_common.hpp  bench_tcp_elio.cpp  bench_tcp_libuv.cpp  benchmark.cpp  chained_coroutines.cpp  debug_test.cpp  dynamic_threads.cpp  exception_handling.cpp  hello_world.cpp  http2_client.cpp  http_client.cpp  http_server.cpp  io_benchmark.cpp  microbench.cpp  parallel_tasks.cpp  quick_benchmark.cpp  rdma_gpu_bw.cpp  rdma_perf.cpp  rdma_pingpong_mock.cpp  rdma_req_resp_ibverbs.cpp  rpc_client_example.cpp  rpc_server_example.cpp  scalability_test.cpp  signal_handling.cpp  sse_client.cpp  sse_server.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  thread_affinity.cpp  uds_echo_client.cpp  uds_echo_server.cpp  websocket_client.cpp  websocket_server.cpp
include/elio/: debug.hpp  elio.hpp
include/elio/coro/: awaitable_base.hpp  cancel_token.hpp  frame.hpp  frame_allocator.hpp  generator.hpp  promise_base.hpp  task.hpp  task_execution_context.hpp  task_group.hpp  task_handle.hpp  this_coro.hpp  traits.hpp  vthread_owner.hpp  vthread_stack.hpp  when_all.hpp  when_any.hpp  with_timeout.hpp
include/elio/detail/: intrusive_list.hpp
include/elio/hash/: cpu_features.hpp  crc32.hpp  hash.hpp  sha1.hpp  sha256.hpp
include/elio/http/: client_base.hpp  http.hpp  http2.hpp  http2_client.hpp  http2_session.hpp  http_client.hpp  http_common.hpp  http_message.hpp  http_parser.hpp  http_server.hpp  sse.hpp  sse_client.hpp  sse_server.hpp  websocket.hpp  websocket_client.hpp  websocket_frame.hpp  websocket_handshake.hpp  websocket_server.hpp
include/elio/io/: epoll_backend.hpp  file_helpers.hpp  io_awaitables.hpp  io_backend.hpp  io_context.hpp  io_context_identity.hpp  io_operation_guard.hpp  io_uring_backend.hpp
include/elio/log/: logger.hpp  macros.hpp
include/elio/net/: resolve.hpp  stream.hpp  tcp.hpp  uds.hpp
include/elio/rdma/: backend_traits.hpp  cq_pump.hpp  (+8 more)
tests/: CMakeLists.txt  fork_boundary_tests.cpp  stress_test_shared_mutex.cpp  test_main.cpp  test_watchdog.cpp
tests/bench/: bench_channel.cpp
tests/cmake/: check_elio_compile_feature_export.cmake  check_elio_version_compatibility.cmake  check_http2_fetchcontent_cache_scope.cmake  check_http2_option_dependencies.cmake  check_liburing_package_export.cmake  check_linux_platform.cmake  check_rdma_cuda_example_api.cmake  check_rdma_cuda_package_export.cmake  check_rdma_dependency_package_export.cmake  check_threads_package_export.cmake
tests/compile/: public_header_examples.cpp
tests/integration/: test_dynamic_threads.cpp  test_exception_propagation.cpp  test_parallel_tasks.cpp  test_scheduler_integration.cpp
tests/integration_rdma/: ibverbs_backend.hpp  test_rdma_rxe_loopback.cpp
tests/stubs/rdma_cuda/: cuda_runtime.h
tests/stubs/rdma_cuda/infiniband/: verbs.h
tests/unit/: crc32c_capability_baseline.cpp  crc32c_capability_sse42.cpp  test_affinity.cpp  test_autoscaler.cpp  test_awaitable_base.cpp  test_batch_io.cpp  test_bench_tcp_common.cpp  test_blocking_pool.cpp  test_cancel_token.cpp  test_cancellation_context.cpp  test_channel_close.cpp  test_channel_debug.cpp  test_channel_success.cpp  test_chase_lev_deque.cpp  test_close_wake.cpp  test_combinators.cpp  test_debugger_scripts.py  test_frame_allocation.cpp  test_frame_allocator.cpp  test_generator.cpp  test_hash.cpp  test_http2.cpp  test_http_client.cpp  test_http_parser.cpp  test_http_server.cpp  test_intrusive_list.cpp  test_io.cpp  test_lockfree_ring.cpp  test_logger.cpp  test_object_cache.cpp  test_rdma_atomic.cpp  test_rdma_cm.cpp  test_rdma_cq_pump.cpp  test_rdma_cuda_gpu_memory_region.cpp  test_rdma_dispatcher.cpp  test_rdma_ibverbs_backend.cpp  test_rdma_ibverbs_endpoint.cpp  test_rdma_imm.cpp  test_rdma_inline.cpp  test_rdma_memory_region.cpp  (+22 more)
tools/: elio-gdb.py  elio-lldb.py  elio-pstack  elio_lldb.py
wiki/: API-Contracts.md  API-Reference.md  Batch-IO-and-File-Helpers.md  Core-Concepts.md  Debugging.md  Examples.md  Fork-Safety.md  Getting-Started.md  HTTP2-Guide.md  Hash-Functions.md  Home.md  Migrating-to-0.6.md  Networking.md  Performance-Tuning.md  RDMA-Guide.md  RPC-Framework.md  Security-Guidelines.md  Signal-Handling.md  TLS-Configuration.md  WebSocket-SSE.md
(+96 files in other folders)
